# happy_hacking_glibc

./: CMakeLists.txt  README  make-cmakelists.sh
0_undoc/: epoll.c
12_stream_io/: CMakeLists.txt  FILE_dissection.c  ap_data.txt  asprintf.c  fseek.c  mode_string.c  nolock_stream.c  positioning.c  print_wide.c  ro_data.txt  stream_lock.c  stream_type.c  vprint.c  wide_oriented.c
13_low_io/: CMakeLists.txt  mysterious_copy_file.c  scatter-gather.c
14_filesystem/: CMakeLists.txt  delete.c  perm_mode.c
15_pipe_and_fifo/: CMakeLists.txt  atomicity.c  fifo.c  pipe.c  pipe2.c  popen_pclose.c
16_sockets/: CMakeLists.txt  README  byte_order_conversion.c  inet6_socket.c  inet_client.c  inet_read_length.c  inet_server.c  inet_socket.c  insock6_util.c  insock_util.c  interface_naming.c  name_lookup.c  neo_name_lookup.c  port_n_service_lookup.c  protocol_lookup.c  un_socket.c  un_socketpair.c  unix_domain_socket.c
16_sockets/daytime_inet_server_client/: Makefile  client.c  server.c  utils.h
19_math/: 19_8_pseudo_random.c  CMakeLists.txt
21_date_time/: CMakeLists.txt  tm_strftime.c
24_signals/: CMakeLists.txt  SIGALRM.c  SIGINT.c  raise_blocked.c  sigaction.c  signal.c
26_processes/: CMakeLists.txt  exec.c  fork.c  system.c  wait.c  waitpid.c
2_error/: 2_2_error_code.c  CMakeLists.txt
misc_n_unassigned/: CMakeLists.txt  program_name.c
pthread/: CMakeLists.txt  base.c
unsung_utils/: utils.c  utils.h
