cmake_minimum_required(VERSION 3.16)
project(happy_hacking_glibc C)

set(CMAKE_C_STANDARD 11)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

add_subdirectory(0_undoc)
add_subdirectory(15_pipe_and_fifo)
add_subdirectory(26_processes)
add_subdirectory(2_error)
add_subdirectory(12_stream_io)
add_subdirectory(13_low_io)
add_subdirectory(16_sockets)
add_subdirectory(17_terminal)
add_subdirectory(19_math)
add_subdirectory(14_filesystem)
add_subdirectory(21_date_time)
add_subdirectory(24_signals)
add_subdirectory(pthread)
add_subdirectory(misc_n_unassigned)