add_executable(byte_order_conversion byte_order_conversion.c)
add_executable(insock6_util insock6_util.c)
add_executable(insock_util insock_util.c)
add_executable(interface_naming interface_naming.c)
add_executable(name_lookup name_lookup.c)
add_executable(neo_name_lookup neo_name_lookup.c)
add_executable(port_n_service_lookup port_n_service_lookup.c)
add_executable(sockaddr sockaddr.c)
add_executable(unix_domain_socket unix_domain_socket.c)
